# AlbaLisp

./: CMakeLists.txt  TODO.md  a.out  compile.sh  compile_commands.json  lispy  lispy.c  parsing  parsing.c  prompt  prompt.c
.clangd/index/: FILE.h.ECDB1489B720ADDDDD88E7A992E19E5389221087.idx  _G_config.h.3F2C403FB4EA5CFF55E0913CAD642A58FF408A35.idx  __fpos64_t.h.F01A08D5C71BEDC3FDA87645DF901D30502A1A9F.idx  __fpos_t.h.73DA5160D8FA66C0B9FDB281FFEEACDBF863B9F0.idx  __locale_t.h.2DD01EE8332FB3D3ED02E551EE3A31520A5B92DB.idx  alloca.h.58DF441493762C63BAE78298DC61BA68EE225130.idx  byteswap.h.DB7E431D73E3F6B0731BF3DD70DC09F69F65AD4B.idx  cdefs.h.F9DCDD73D93D36795EA05D3707CE8C74C43706E2.idx  ctype.h.AE939D95819859CF35E8787335BB0F14ACEA9C21.idx  endian.h.B6885ACF1E59D9832FE451F9D26E2DD7DC08C52B.idx  errno.h.8B375E829A1DD24D417E5BD64C9FDE5A994DE581.idx  errno.h.FD8E048DCFD9C3F079DF0CA261C0FAEEEA62558F.idx  features.h.3C187EA00A7A774C5A75C66E04ACFF0AFF8BA465.idx  floatn-common.h.6A160EB6A48B4B5307EE3444A7B77DD72FF8CC1A.idx  floatn.h.B032D934A0A0A0764291D86CCD355D2573B7A82B.idx  flt-eval-method.h.D4F665992740094AF0F0DFFF07A7C5A41DB7792E.idx  fp-fast.h.DD2E58C6FE386BAADCBC1B9A92C6FB706D7E33B6.idx  fp-logb.h.75B44A2A7AC1B7D9E7EE2B8FA54818A72B4317FC.idx  libc-header-start.h.E65A87B9099170F08BC5B0F194D6A3715EE56B75.idx  libio.h.3CFEB252713446CA5B48208B34D885688E750266.idx  libm-simd-decl-stubs.h.A3D22A044407A6BC6DA082D64A55C2C236D9C068.idx  locale_t.h.C9358A3F0AA48C26AE72D1442EFCCD25ED09CFBB.idx  (+33 more)
src/: alba.c  eval.h  lval.h  main.c  parsing.h
src/lval/: all.h  builtin.h  core.h  (+6 more)
